# aifoundry-workshop

./: .env.template  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  TROUBLESHOOTING.md  TUTORIALS.md  install_deps.sh  pyproject.toml
.devcontainer/: devcontainer.json
agents/evaluations/data/: single-turn-eval-ds.jsonl
agents/evaluations/data/output/: cloud-evaluation-dataset.jsonl  evaluation_results.json  single-turn-eval-ds-agent-output.jsonl
agents/evaluations/rag/: .env.template  README.md  __init__.py  example_evaluation.py  rag_agent_eval.py  rag_agent_eval_azure.py  rag_agent_eval_in_foundry.py  run_evaluation.py
agents/rag/: README.md  rag_agent.py
aisearch/: .env.template  README.md  create_search_index.py  document_processor.py  document_processor_del.py  ingest_documents.py
docintel/: README.md  pdf-2-md.py
docintel/data/: GPT-4-Technical-Report.md  azure-ai-services-document-intelligence-doc-intel-4.0.0.md  document-intelligence-4.md
docs/: README.md
docs/api-reference/: README.md
docs/examples/: README.md  basic_rag_query.py
