[project]
name = "aifoundry-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-documentintelligence>=1.0.2",
    "azure-search-documents>=11.5.0",
    "azure-identity>=1.17.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "openai>=1.84.0",
]
